left aligned messages per issue request

--- a/santa/AngularClient/santa-pone-central/src/app/shared/contact-panel/contact-panel.component.css
+++ b/santa/AngularClient/santa-pone-central/src/app/shared/contact-panel/contact-panel.component.css
@@ -95,7 +95,7 @@ mat-card
 {
     background-color: #1788FE;
     color: white;
-    text-align: right;
+    text-align: left;
     margin-right: 10px;
     margin-left: auto;
 }
